# cubescrambler

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
cubescrambler/: __init__.py  bigCubesScrambler.py  clockScrambler.py  cuboidsScrambler.py  megaminxScrambler.py  pyraminxScrambler.py  scrambler222.py  scrambler333.py  scrambler444.py  scrambler555.py  scrambler666.py  scrambler777.py  skewbScrambler.py  squareOneScrambler.py
cubescrambler/js_resources/: 1x3x3.js  2x2x2.js  2x2x3.js  mathlib.js  megascramble.js  pyraminx.js  scramble.js  scramble_333_edit.js  scramble_444.js  scramble_sq1.js  skewb.js  utilscramble.js
