[build-system]
requires      = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cubescrambler"
version = "1.0.0"
description = "A Python utility package for generating scrambles for twisty puzzles without non-python dependency"
readme = "README.md"
authors = [{ name = "Márton Kónya", email = "konyamarci52@proton.me" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["rubik", "cube", "scramble"]
dependencies = [
    "dukpy",
]

[project.urls]
Homepage = "https://github.com/koma52/cubescrambler"

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]

